# take-control

./: Cargo.toml  README.md  rust-toolchain.toml
injected/: Cargo.toml
injected/src/: common_game_types.rs  gui.rs  lib.rs  script.rs  tas_player.rs  windows_types.rs
injected/src/memory/: app.rs  control.rs  coregame.rs  input.rs  mod.rs  net.rs  physics.rs  renderer.rs  rl.rs
injector/: Cargo.toml
injector/src/: main.rs
my_proc_macros/: Cargo.toml
my_proc_macros/src/: lib.rs
