[package]
name = "injected"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hudhook = "0.8.0"
retour = { version = "0.3", features = ["static-detour"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
physx = "0.19.0"

[dependencies.windows]
version = "0.54.0"