[package]
name = "injected"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aobscan = "0.3.0"
chumsky = "0.9.3"
hudhook = "0.8.0"
my_proc_macros = { path = "../my_proc_macros" }
physx = "0.19.0"
retour = { version = "0.3", features = ["static-detour"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

[dependencies.windows]
version = "0.54.0"
features = ["Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_ProcessStatus"]
